(include dune.inc)

(library
 (name partial_benchmark_suite)
 (ocamlopt_flags
  (:standard -O3))
 (modes native)
 (modules
  (:standard \ generate_partial_benchmark_rules))
 (libraries ocamlHeader))

(executable
 (modules generate_partial_benchmark_rules)
 (name generate_partial_benchmark_rules))

(env
 (dev
  (flags
   (:standard -w -a))))

(rule
 (targets dune.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run ./generate_partial_benchmark_rules.exe))))

(rule
 (alias generate_partial_benchmarks)
 (action
  (diff dune.inc dune.gen)))
